@@ -285,10 +285,14 @@ public interface ClusterInstance {
     default void waitTopicDeletion(String topic) throws InterruptedException {
         waitForTopic(topic, 0);
     }
-    
+
     default void createTopic(String topicName, int partitions, short replicas) throws InterruptedException {
+        createTopic(topicName, partitions, replicas, Map.of());
+    }
+
+    default void createTopic(String topicName, int partitions, short replicas, Map<String, String> props) throws InterruptedException {
         try (Admin admin = admin()) {
-            admin.createTopics(Collections.singletonList(new NewTopic(topicName, partitions, replicas)));
+            admin.createTopics(List.of(new NewTopic(topicName, partitions, replicas).configs(props)));
             waitForTopic(topicName, partitions);
         }
     }
@@ -364,11 +368,11 @@ public interface ClusterInstance {
     default List<Authorizer> authorizers() {
         List<Authorizer> authorizers = new ArrayList<>();
         authorizers.addAll(brokers().values().stream()
-                .filter(server -> server.authorizer().isDefined())
-                .map(server -> server.authorizer().get()).toList());
+                .filter(server -> server.authorizerPlugin().isDefined())
+                .map(server -> server.authorizerPlugin().get().get()).toList());
         authorizers.addAll(controllers().values().stream()
-                .filter(server -> server.authorizer().isDefined())
-                .map(server -> server.authorizer().get()).toList());
+                .filter(server -> server.authorizerPlugin().isDefined())
+                .map(server -> server.authorizerPlugin().get().get()).toList());
         return authorizers;
     }
 
